Premières corrections des contrastes

--- a/style.css
+++ b/style.css
@@ -735,6 +735,10 @@ h4 {
     margin-top: 24px;
 }
 
+.black {
+    color: #3B3B3B!important;
+}
+
 .white {
     color: #FFFFFF!important;
 }
@@ -778,9 +782,13 @@ h4 {
     color: #F3976C!important;
 }
 
+.tc-black {
+    color: #3B3B3B!important;
+}
+
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #3B3B3B!important;
 }
 
 .btn-atomic-tangerine:hover {
